2011-09-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Combine indices; spiff ‘er’ entries.

	* doc/guile-pg.texi (er): Use ‘@defindex’,
	not ‘@defcodeindex’; combine into concept index.
	(vr, fn): Combine into concept index.
	(bummer): New @macro.
	(Top): Combine index menu entries into simply "Index".
	(Procedure Index, Error Index): Delete.
	(Index): New node/unnumbered.
	* doc/ref.texh: Do ‘s/@erindex/@bummer/g’.
	(Large Objects): Add ‘@code’ around ‘fport_write’ @bummer;
	omit now-redundant "error" from "memory" @bummer.
	(qcons quoting): Use ‘@vindex’ for ‘sql-quote-auto-E?’.

2011-09-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Document builtin type converters.

	* doc/Makefile.am (guile_pg_TEXINFOS): Add coltypes.texi.
	(EXTRA_DIST): Likewise.
	(coltypes.texi): New target.
	* doc/ref.texh (Consulting Existing Type Converters):
	Add heading "Builtin Converters" and blurb;
	@include coltypes.texi in a @example block.

2011-09-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[boot] Use INSTALL.UTF-8 from gnulib for INSTALL.

	* autogen.sh (actually): New func; use it
	to copy INSTALL.UTF-8 from gnulib to INSTALL.

2011-09-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	New (database postgres-qcons) fluid: sql-quote-auto-E?

	* doc/ref.texh (qcons quoting): Add section "Standard Conforming
	Strings"; add intro text; add @tsin for ‘sql-quote-auto-E?’.

2011-09-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Check for ‘alloca’ support at configure time.

	* configure.ac (AC_FUNC_ALLOCA): New macro call.

2011-09-23  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[boot] Re-enable dependency tracking support in Automake.

	This undoes 2011-07-21, "Disable dependency tracking support in
	Automake by default", a misguided premature optimization.

	* configure.ac (AM_INIT_AUTOMAKE): Remove ‘no-dependencies’.

2011-08-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build int] Use snuggle.m4 more.

	* build-aux/snuggle.m4: New file.
	* configure.ac: Do ‘s/GUILE_PROGS/SNUGGLE_PROGS/’,